<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Maps Bridge Template
 *
 * Serval Maps Bridge Template Software is free software; you can redistribute 
 * it and/or modify it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_activity_ui_lbl_title"
        style="@style/smapsHeader"
        android:text="@string/main_activity_ui_lbl_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/main_activity_ui_lbl_description"
        style="@style/smapsText"
        android:text="@string/main_activity_ui_lbl_description" />

    <LinearLayout
        style="@style/smapsLayout">

        

    </LinearLayout>

    <TableLayout
        style="@style/smapsLayout" >

        <TableRow
            style="@style/smapsLayout">
            <Button
	            android:id="@+id/main_activity_ui_btn_settings"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_settings" />
	
	        <Button
	            android:id="@+id/main_activity_ui_btn_batch"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_batch" />
	
	        <Button
	            android:id="@+id/main_activity_ui_btn_log"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_log" />
        </TableRow>

        <TableRow
            style="@style/smapsLayout">
            <Button
	            android:id="@+id/main_activity_ui_btn_reset_log"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_reset_log" />
	
	        <Button
	            android:id="@+id/main_activity_ui_btn_contact"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_contact" />
	
	        <Button
	            android:id="@+id/main_activity_ui_btn_close"
	            style="@style/smapsButton"
	            android:text="@string/main_activity_ui_btn_close" />
        </TableRow>
        
    </TableLayout>

</LinearLayout>