<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Maps Bridge Template
 *
 * Serval Maps Bridge Template Software is free software; you can redistribute 
 * it and/or modify it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference 
        android:dialogTitle="@string/preferences_upload_url_dialog_title"
        android:key="preferences_upload_url"
        android:summary="@string/preferences_upload_url_summary"
        android:title="@string/preferences_upload_url_title"
        android:inputType="textUri" />
    <CheckBoxPreference
            android:key="preferences_auto_upload"
            android:title="@string/preferences_auto_upload_title"
            android:summary="@string/preferences_auto_upload_summary"
            android:defaultValue="false"/>
</PreferenceScreen>