<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/batch_activity_ui_lbl_title"
        style="@style/smapsHeader"
        android:text="@string/batch_activity_ui_lbl_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batch_activity_ui_lbl_description"
        style="@style/smapsText"
        android:text="@string/batch_activity_ui_lbl_description" />

    <ProgressBar
        android:id="@+id/batch_activity_ui_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
        android:layout_marginLeft="@dimen/ui_elem_margin_left"
        android:layout_marginRight="@dimen/ui_elem_margin_right"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/batch_activity_ui_lbl_status"
        style="@style/smapsTextfill"
        android:visibility="invisible" />

    <LinearLayout
        style="@style/smapsLayout">

        <Button
            android:id="@+id/batch_activity_ui_btn_upload"
            style="@style/smapsButton"
            android:text="@string/batch_activity_ui_btn_upload" />

        <Button
            android:id="@+id/batch_activity_ui_btn_close"
            style="@style/smapsButton"
            android:text="@string/batch_activity_ui_btn_close" />

    </LinearLayout>

</LinearLayout>